--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
 										</p>
 									</div>
 									<div class="lookbook__button">
-										<a class='lookbook__link button' href='lookbook.htmlw'>view now</a>
+										<a class='lookbook__link button' href='lookbook.html'>view now</a>
 									</div>
 								</div>
 							</div>
