Added some anchors.

--- a/stores.html
+++ b/stores.html
@@ -183,7 +183,7 @@
 		<main class="stores">
 			<div class="container">
 			<section class="stores__cities">
-				<div class="stores__row">
+				<div class="stores__row" id='stores'>
 					<div class="stores__item">
 						<div class="stores__title title">
 							<h3>london</h3>
@@ -197,7 +197,7 @@
 							</p>
 						</div>
 						<div class="stores__button">
-							<a class='button' id='london' style='cursor: pointer;'>view details</a>
+							<a class='button' href='#stores'id='london' style='cursor: pointer;'>view details</a>
 						</div>
 					</div>
 					<div class="stores__item">
@@ -213,7 +213,7 @@
 							</p>
 						</div>
 						<div class="stores__button">
-							<a class='button' id='newyork' style='cursor: pointer;'>view details</a>
+							<a class='button' href='#stores' id='newyork' style='cursor: pointer;'>view details</a>
 						</div>
 					</div>
 					<div class="stores__item">
@@ -229,7 +229,7 @@
 							</p>
 						</div>
 						<div class="stores__button">
-							<a class='button' id='paris' style='cursor: pointer;'>view details</a>
+							<a class='button' href='#stores' id='paris' style='cursor: pointer;'>view details</a>
 						</div>
 					</div>
 				</div>
