--- a/stores.html
+++ b/stores.html
@@ -183,7 +183,7 @@
 		<main class="stores">
 			<div class="container">
 			<section class="stores__cities">
-				<div class="stores__row" id='stores'>
+				<div class="stores__row">
 					<div class="stores__item">
 						<div class="stores__title title">
 							<h3>london</h3>
@@ -238,7 +238,7 @@
 			<section class="stores__location">
 				<div class="container-fluid">
 					<div class="stores__content">
-						<div class="stores__map">
+						<div class="stores__map" id='stores'>
 							<div class="stores__googlemap" id='map'>
 								<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d877.8890288784381!2d-0.14000527325655415!3d51.51238781177346!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487604d5767c9015%3A0x1cf0ab0381c7fd45!2zMTgwIFJlZ2VudCBTdCwgU29obywgTG9uZG9uIFcxQiA1VEosINCS0LXQu9C40LrQvtCx0YDQuNGC0LDQvdC40Y8!5e0!3m2!1sru!2skg!4v1613985468158!5m2!1sru!2skg" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 							</div>
