Fixing some validator errors.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang='en'>
 	<head>
 		<link rel="stylesheet" type="text/css" href="style/reset.css">
 		<link rel="stylesheet" type="text/css" href="style/icons.css">
@@ -133,15 +133,14 @@
 														<div class="header__dropped">
 															<h3>ipsum lorem</h3>
 															<ul class='header__listing'>
-																<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+																<li><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 																tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 																quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-																consequat.</p>
+																consequat.</p></li>
 															</ul>
 														</div>
 														<div class="header__dropped">
 															<ul class='header__listing'>
-																<p></p>
 															</ul>
 														</div>
 													</div>
@@ -227,9 +226,9 @@
 						<div class="products__grid-container">
 							<div class="products__item">
 								<a>$89.99</a>
-								<img src="img/products/product-test.png">
-								<img class='products__mini' src="img/products/product-test.png">
-								<img class='products__mini2' src="img/products/product-test.png">
+								<img src="img/products/product-test.png" alt='coat'>
+								<img class='products__mini' src="img/products/product-test.png" alt='coat'>
+								<img class='products__mini2' src="img/products/product-test.png" alt='coat'>
 								<div class="products__info">
 									<div class="products__row">
 										<h3>womens burnt orange casual tee $29.95</h3>
@@ -245,9 +244,9 @@
 							</div>
 							<div class="products__item">
 								<a>$47.50</a>
-								<img src="img/products/product-2.png">
-								<img class='products__mini' src="img/products/product-2.png">
-								<img class='products__mini2' src="img/products/product-2.png">
+								<img src="img/products/product-2.png" alt='coat'>
+								<img class='products__mini' src="img/products/product-2.png" alt='coat'>
+								<img class='products__mini2' src="img/products/product-2.png" alt='coat'>
 								<div class="products__info">
 									<div class="products__row">
 										<h3>womens burnt orange casual tee $29.95</h3>
@@ -263,9 +262,9 @@
 							</div>
 							<div class="products__item-big">
 								<a><span>$107</span>$89.99</a>
-								<img src="img/products/product-3.png">
-								<img class='products__mini' src="img/products/product-3.png">
-								<img class='products__mini-big' src="img/products/product-3.png">
+								<img src="img/products/product-3.png" alt='coat'>
+								<img class='products__mini' src="img/products/product-3.png" alt='coat'>
+								<img class='products__mini-big' src="img/products/product-3.png" alt='coat'>
 								<div class="products__info big">
 									<div class="products__row">
 										<h3>womens burnt orange casual tee $29.95</h3>
@@ -281,9 +280,9 @@
 							</div>
 							<div class="products__item-big">
 								<a>$69.95</a>
-								<img src="img/products/product-4.png">
-								<img class='products__mini' src="img/products/product-4.png">
-								<img class='products__mini-big' src="img/products/product-4.png">
+								<img src="img/products/product-4.png" alt='coat'>
+								<img class='products__mini' src="img/products/product-4.png" alt='coat'>
+								<img class='products__mini-big' src="img/products/product-4.png" alt='coat'>
 								<div class="products__info big">
 									<div class="products__row">
 										<h3>womens burnt orange casual tee $29.95</h3>
@@ -299,9 +298,9 @@
 							</div>
 							<div class="products__item">
 								<a>$29.95</a>
-								<img src="img/products/product-5.png">
-								<img class='products__mini' src="img/products/product-5.png">
-								<img class='products__mini2' src="img/products/product-5.png">
+								<img src="img/products/product-5.png" alt='coat'>
+								<img class='products__mini' src="img/products/product-5.png" alt='coat'>
+								<img class='products__mini2' src="img/products/product-5.png" alt='coat'>
 								<div class="products__info">
 									<div class="products__row">
 										<h3>womens burnt orange casual tee $29.95</h3>
@@ -317,9 +316,9 @@
 							</div>
 							<div class="products__item">
 								<a>$34.79</a>
-								<img src="img/products/product-6.png">
-								<img class='products__mini' src="img/products/product-6.png">
-								<img class='products__mini2' src="img/products/product-6.png">
+								<img src="img/products/product-6.png" alt='coat'>
+								<img class='products__mini' src="img/products/product-6.png" alt='coat'>
+								<img class='products__mini2' src="img/products/product-6.png" alt='coat'>
 								<div class="products__info">
 									<div class="products__row">
 										<h3>womens burnt orange casual tee $29.95</h3>
@@ -343,7 +342,7 @@
 						<div class="lookbook__row">
 							<div class="lookbook__item">
 								<div class="lookbook__people">
-									<img src="img/lookbook/man.png">
+									<img src="img/lookbook/man.png" alt='coat'>
 								</div>
 								<div class="lookbook__desc">
 									<div class="lookbook__title looktitle">
@@ -365,7 +364,7 @@
 							</div>
 							<div class="lookbook__item">
 								<div class="lookbook__people">
-									<img src="img/lookbook/woman.png">
+									<img src="img/lookbook/woman.png" alt='coat'>
 								</div>
 								<div class="lookbook__desc">
 									<div class="lookbook__title looktitle">
@@ -387,7 +386,7 @@
 							</div>
 							<div class="lookbook__item">
 								<div class="lookbook__people">
-									<img src="img/lookbook/you.png">
+									<img src="img/lookbook/you.png" alt='coat'>
 								</div>
 								<div class="lookbook__desc">
 									<div class="lookbook__title looktitle">
