Fixed some validator errors.

--- a/brand.html
+++ b/brand.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang='en'>
 <head>
 	<link rel="stylesheet" type="text/css" href="style/reset.css">
 	<link rel="stylesheet" type="text/css" href="style/icons.css">
@@ -131,15 +131,14 @@
 														<div class="header__dropped">
 															<h3>ipsum lorem</h3>
 															<ul class='header__listing'>
-																<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+																<li><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 																tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 																quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-																consequat.</p>
+																consequat.</p></li>
 															</ul>
 														</div>
 														<div class="header__dropped">
 															<ul class='header__listing'>
-																<p></p>
 															</ul>
 														</div>
 													</div>
@@ -210,7 +209,7 @@
 					<div class="brand__content">
 						<div class="brand__block-left">
 							<div class="brand__image">
-								<img src="img/brand/man-1.jpg">
+								<img src="img/brand/man-1.jpg" alt='promo-photo'>
 							</div>
 						</div>
 						<div class="brand__block-right">
@@ -230,7 +229,7 @@
 						</div>
 						<div class="brand__block-vertical">
 							<div class="brand__image-vert">
-								<img src="img/brand/girl-2.jpg">
+								<img src="img/brand/girl-2.jpg" alt='promo-photo'>
 							</div>
 							<div class="brand__about-vert">
 								<div class="brand__title title">
@@ -249,7 +248,7 @@
 						</div>
 						<div class="brand__block-vertical">
 							<div class="brand__image-vert">
-								<img src="img/brand/girl-3.jpg">
+								<img src="img/brand/girl-3.jpg" alt='promo-photo'>
 							</div>
 							<div class="brand__about-vert">
 								<div class="brand__title title">
@@ -267,9 +266,9 @@
 									</p>
 								</div>
 								<div class="brand__awards">
-									<img src="img/brand/award1.png">
-									<img src="img/brand/award2.png">
-									<img src="img/brand/award3.png">
+									<img src="img/brand/award1.png" alt='promo-photo'>
+									<img src="img/brand/award2.png" alt='promo-photo'>
+									<img src="img/brand/award3.png" alt='promo-photo'>
 								</div>
 							</div>
 						</div>
