--- a/lookbook.html
+++ b/lookbook.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang='en'>
 <head>
 	<link rel="stylesheet" type="text/css" href="style/reset.css">
 	<link rel="stylesheet" type="text/css" href="style/icons.css">
@@ -131,15 +131,14 @@
 														<div class="header__dropped">
 															<h3>ipsum lorem</h3>
 															<ul class='header__listing'>
-																<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+																<li><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 																tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 																quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-																consequat.</p>
+																consequat.</p></li>
 															</ul>
 														</div>
 														<div class="header__dropped">
 															<ul class='header__listing'>
-																<p></p>
 															</ul>
 														</div>
 													</div>
@@ -220,7 +219,7 @@
 						<div class="lookbook__grid">
 							  <div class="lookbook__pic">
 							  	<a class='lookbook__size'>ref<span>M1</span></a>
-							  	<img src="img/look/photo-1.jpg">
+							  	<img src="img/look/photo-1.jpg" alt='product-photo'>
 							  	<div class="lookbook__hover-icons">
 							  		<i class="fas fa-info"></i>
 							  		<i class="fas fa-heart"></i>
@@ -229,7 +228,7 @@
 							  </div>
 							  <div class="lookbook__pic">
 							  	<a class='lookbook__size'>ref<span>W1</span></a>
-							  	<img src="img/look/photo-2.jpg">
+							  	<img src="img/look/photo-2.jpg" alt='product-photo'>
 							  	<div class="lookbook__hover-icons">
 							  		<i class="fas fa-info"></i>
 							  		<i class="fas fa-heart"></i>
@@ -254,11 +253,11 @@
 							  			<a class='button' href=''>view now</a>
 							  		</div>
 							  	</div>
-							  	<img src="img/look/photo-3.jpg">
+							  	<img src="img/look/photo-3.jpg" alt='product-photo'>
 							  </div>
 							  <div class="lookbook__pic">
 							  	<a class='lookbook__size'>ref<span>MJ1</span></a>
-							  	<img src="img/look/photo-4.jpg">
+							  	<img src="img/look/photo-4.jpg" alt='product-photo'>
 							  	<div class="lookbook__hover-icons">
 							  		<i class="fas fa-info"></i>
 							  		<i class="fas fa-heart"></i>
@@ -266,7 +265,7 @@
 							  </div>
 							  <div class="lookbook__pic">
 							  	<a class='lookbook__size'>ref<span>M2</span></a>
-							  	<img src="img/look/photo-5.jpg">
+							  	<img src="img/look/photo-5.jpg" alt='product-photo'>
 							  	<div class="lookbook__hover-icons">
 							  		<i class="fas fa-info"></i>
 							  		<i class="fas fa-heart"></i>
@@ -274,7 +273,7 @@
 							  </div>
 							  <div class="lookbook__pic">
 							  	<a class='lookbook__size'>ref<span>W2</span></a>
-							  	<img src="img/look/photo-6.jpg">
+							  	<img src="img/look/photo-6.jpg" alt='product-photo'>
 							  	<div class="lookbook__hover-icons">
 							  		<i class="fas fa-info"></i>
 							  		<i class="fas fa-heart"></i>
@@ -282,7 +281,7 @@
 							  </div>
 							  <div class="lookbook__pic">
 							  	<a class='lookbook__size'>ref<span>W3</span></a>
-							  	<img src="img/look/photo-7.jpg">
+							  	<img src="img/look/photo-7.jpg" alt='product-photo'>
 							  	<div class="lookbook__hover-icons">
 							  		<i class="fas fa-info"></i>
 							  		<i class="fas fa-heart"></i>
@@ -320,11 +319,11 @@
 							  			<h2>a new look</h2>
 							  		</div>
 							  	</div>
-							  	<img src="img/look/photo-8.jpg">
+							  	<img src="img/look/photo-8.jpg" alt='product-photo'>
 							  </div>
 							  <div class="lookbook__pic">
 							  	<a class='lookbook__size'>ref<span>W4</span></a>
-							  	<img src="img/look/photo-9.jpg">
+							  	<img src="img/look/photo-9.jpg" alt='product-photo'>
 							  	<div class="lookbook__hover-icons">
 							  		<i class="fas fa-info"></i>
 							  		<i class="fas fa-heart"></i>
@@ -531,8 +530,8 @@
 	</div>
 
 	<script src='https://code.jquery.com/jquery-3.5.1.min.js'></script>
-	<script type="text/javascript" src='scripts/script.js'></script>
-	<script type="text/javascript" src='scripts/attrs.js'></script>	
+	<script src='scripts/script.js'></script>
+	<script src='scripts/attrs.js'></script>	
 	</div>
 </body>
 </html>
