Fixed some validator errors.

--- a/stores.html
+++ b/stores.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang='en'>
 <head>
 	<link rel="stylesheet" type="text/css" href="style/reset.css">
 	<link rel="stylesheet" type="text/css" href="style/icons.css">
@@ -189,7 +189,7 @@
 							<h3>london</h3>
 						</div>
 						<div class="stores__subtitle subtitle">
-							<h4>180-182 regent street, london, w1b 5bt<h4>
+							<h4>180-182 regent street, london, w1b 5bt</h4>
 						</div>
 						<div class="stores__text parag">
 							<p>
@@ -205,7 +205,7 @@
 							<h3>new york</h3>
 						</div>
 						<div class="stores__subtitle subtitle">
-							<h4>109 columbus circle, new york, ny 10023<h4>
+							<h4>109 columbus circle, new york, ny 10023</h4>
 						</div>
 						<div class="stores__text parag">
 							<p>
@@ -221,7 +221,7 @@
 							<h3>paris</h3>
 						</div>
 						<div class="stores__subtitle subtitle">
-							<h4>2133 rue saint-honore, 75001 paris<h4>
+							<h4>2133 rue saint-honore, 75001 paris</h4>
 						</div>
 						<div class="stores__text parag">
 							<p>
@@ -534,6 +534,6 @@
 	</div>
 
 	<script src='https://code.jquery.com/jquery-3.5.1.min.js'></script>
-	<script type="text/javascript" src='scripts/script.js'></script>
+	<script src='scripts/script.js'></script>
 </body>
 </html>
