--- a/view.html
+++ b/view.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang='en'>
 	<head>
 		<link rel="stylesheet" type="text/css" href="style/reset.css">
 		<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
@@ -191,17 +191,17 @@
 								<div class="view__wrap swiper-wrapper">
 									<div class="view__item swiper-slide">
 										<div class="view__zoomer swiper-zoom-container">
-											<img src="img/view/default.jpg">
+											<img src="img/view/default.jpg" alt='product'>
 										</div>
 									</div>
 									<div class="view__item swiper-slide">
 										<div class="view__zoomer swiper-zoom-container">
-											<img src="img/view/default.jpg">
+											<img src="img/view/default.jpg" alt='product'>
 										</div>
 									</div>
 									<div class="view__item swiper-slide">
 										<div class="view__zoomer swiper-zoom-container">
-											<img src="img/view/default.jpg">
+											<img src="img/view/default.jpg" alt='product'>
 										</div>
 									</div>
 								</div>
@@ -287,11 +287,11 @@
 								</div>
 							</div>
 							<div class="view__buy">
-								<form action='' method='GET'>
+								<form action='buy.php' method='GET'>
 									<div class="view__selects">
 										<div class="view__colour">
 											<label>
-												<h4>colour</h4>
+												<p>colour</p>
 												<select required="">
 													<option disabled="" selected="" hidden="">Select Colour</option>
 													<option value='black'>Black</option>
@@ -303,7 +303,7 @@
 										</div>
 										<div class="view__size">
 											<label>
-												<h4>size</h4>
+												<p>size</p>
 												<select required="">
 													<option disabled="" selected="" hidden="">Select Size</option>
 													<option value='m1'>M1</option>
@@ -315,8 +315,8 @@
 										</div>
 										<div class="view__qty">
 											<label>
-												<h4>qty</h4>
-												<input class='view__numb' type="number" name="" value="1" min="1" max='5'>
+												<p>qty</p>
+												<input class='view__numb' type="number" name="qty" value="1" min="1" max='5'>
 											</label>
 										</div>
 									</div>
@@ -522,9 +522,8 @@
 				</div>
 			</div>
 		</div>
-		</div>
 	<script src='https://code.jquery.com/jquery-3.5.1.min.js'></script>
-	<script type="text/javascript" src='scripts/script.js'></script>
-	<script type="text/javascript" src='scripts/swiping.js'></script>
+	<script src='scripts/script.js'></script>
+	<script src='scripts/swiping.js'></script>
 	</body>
 </html>
