Fixed some errrrrors.

--- a/lookbook.html
+++ b/lookbook.html
@@ -339,7 +339,7 @@
 						<div class="lookbook__row">
 							<div class="lookbook__item" style='padding: 42px 56px 0 0'>
 								<div class="lookbook__people">
-									<img src="img/lookbook/man.png">
+									<img src="img/lookbook/man.png" alt='lookpeople'>
 								</div>
 								<div class="lookbook__desc">
 									<div class="lookbook__title looktitle">
@@ -361,7 +361,7 @@
 							</div>
 							<div class="lookbook__item" style='padding: 42px 56px 0 0'>
 								<div class="lookbook__people">
-									<img src="img/lookbook/woman.png">
+									<img src="img/lookbook/woman.png" alt='lookpeople'>
 								</div>
 								<div class="lookbook__desc">
 									<div class="lookbook__title looktitle">
@@ -383,7 +383,7 @@
 							</div>
 							<div class="lookbook__item" style='padding: 42px 42px 0 20px'>
 								<div class="lookbook__people">
-									<img src="img/lookbook/you.png">
+									<img src="img/lookbook/you.png" alt='lookpeople'>
 								</div>
 								<div class="lookbook__desc">
 									<div class="lookbook__title looktitle">
