--- a/view.html
+++ b/view.html
@@ -291,7 +291,7 @@
 									<div class="view__selects">
 										<div class="view__colour">
 											<label>
-												<p>colour</p>
+												colour
 												<select required="">
 													<option disabled="" selected="" hidden=""><label>Select Colour</label></option>
 													<option value='black'>Black</option>
@@ -303,7 +303,7 @@
 										</div>
 										<div class="view__size">
 											<label>
-												<p>size</p>
+												size
 												<select required="">
 													<option disabled="" selected="" hidden=""><label>Select Size</label></option>
 													<option value='m1'>M1</option>
@@ -315,7 +315,7 @@
 										</div>
 										<div class="view__qty">
 											<label>
-												<p>qty</p>
+												qty
 												<input class='view__numb' type="number" name="qty" value="1" min="1" max='5'>
 											</label>
 										</div>
