--- a/view.html
+++ b/view.html
@@ -293,7 +293,7 @@
 											<label>
 												colour
 												<select required="">
-													<option disabled="" selected="" hidden=""><label>Select Colour</label></option>
+													<label><option disabled="" selected="" hidden="">Select Colour</option></label>
 													<option value='black'>Black</option>
 													<option value='white'>White</option>
 													<option value='red'>Red</option>
@@ -305,7 +305,7 @@
 											<label>
 												size
 												<select required="">
-													<option disabled="" selected="" hidden=""><label>Select Size</label></option>
+													<label><option disabled="" selected="" hidden="">Select Size</option></label>
 													<option value='m1'>M1</option>
 													<option value='m2'>M2</option>
 													<option value='w1'>W1</option>
