--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 		<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="style/style.css">
 		<link rel="preconnect" href="https://fonts.gstatic.com">
-		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="preload" onload="this.rel='stylesheet'">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" >
 		<link rel="preconnect" href="https://fonts.gstatic.com">
-		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="preload" onload="this.rel='stylesheet'">
+		<link rel='stylesheet' href="https://fonts.googleapis.com/css2?family=Roboto&display=swap">
 		<meta charset="utf-8">
 		<meta name="viewport" content='width=device-width, initial-scale=1, user-scalable=0'>
 		<title>Avenue Fashion</title>
